removed live database connection details from applications.properties from public file

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!--==========================
   Nav Section
 ============================-->
-<app-nav></app-nav>
+<!--<app-nav></app-nav>-->
 <!-- /Nav -->    
 
  <!--Content-->     
@@ -9,5 +9,5 @@
  <!--/Content-->   
 
  <!--Footer--> 
-<app-footer></app-footer>
+<!--<app-footer></app-footer>-->
  <!--/Footer--> 
