--- a/frontend/src/app/core/components/contact-us/contact.component.scss
+++ b/frontend/src/app/core/components/contact-us/contact.component.scss
@@ -1,6 +1,4 @@
-
-$primary-color: #3F26BB ;
-$primary-color-light: #3F26BB ;
+@import "../../../../theme.scss";
 /* Contact Section
 --------------------------------*/
 #contact {
