--- a/frontend/src/app/core/components/footer/footer.component.scss
+++ b/frontend/src/app/core/components/footer/footer.component.scss
@@ -72,7 +72,7 @@
 }
 
 #footer .footer-ribbon {
-	background: $primary;
+	background: $primary-color;
 	position: absolute;
 	margin: -90px 0 0 14px;
 	padding: 10px 20px 6px 20px;
