--- a/frontend/src/app/core/components/home/home.component.html
+++ b/frontend/src/app/core/components/home/home.component.html
@@ -1,3 +1,9 @@
+<!--==========================
+  Nav Section
+============================-->
+<app-nav></app-nav>
+<!-- /Nav -->  
+
 <!--========================== 
   Hero Section
 ============================-->
@@ -72,7 +78,8 @@
         </div>
 
     </div>
-</section><!-- #services -->
+</section>
+<!-- #services -->
 
 
 
@@ -135,5 +142,8 @@ Call To Action Section
 
     </div>
 </section><!-- #call-to-action --> 
+ 
 
-
+ <!--Footer--> 
+<app-footer></app-footer>
+ <!--/Footer--> 
