--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,431 +1,30 @@
-@import "./theme.scss";
+@import "./grid.scss";
 @import  "~bootstrap/scss/bootstrap";
 $fa-font-path: "~font-awesome/fonts";
 @import "~font-awesome/scss/font-awesome";
 @import  "~animate.css/animate.min.css";
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800%7CShadows+Into+Light');
-
+@import "./theme.scss";
 
 /*!
- * HiSolution.scss v1.0.0 
+ * HiSolution Main SCSS v1.0.0 
  * Copyright 2018 Heritage Innovative Solutions 
- * Main Style
- * Author     : dgumbo
+ * Author     : gdenzilg@gmail.com
  */ 
 
-/*html,body{height: 100%;} */
-body {
-    background: #fff;
-    color: #666666;
-    font-family: "Open Sans", sans-serif;
-}
-
-a:hover, a:active, a:focus {
-    color: #2dca98;
-    outline: none;
-    text-decoration: none;
-}
-
-p {
+/*----------------------------------------------*/
+/*--------------- Basic Setup ------------------*/
+/*----------------------------------------------*/
+* {
+    margin:0;
     padding: 0;
-    margin: 0 0 30px 0;
+    box-sizing: border-box;
 }
 
-h1, h2, h3, h4, h5, h6 {
-    font-family: "Poppins", sans-serif;
-    font-weight: 400;
-    margin: 0 0 20px 0;
-    padding: 0;
+html{
+    background-color: #fff;
+    color:#555; 
+    font-family: $font-family;
+    font-weight: 300;
+    font-size: 20px; 
+    //text-rendering: optimizedLegibility; 
 }
-
-/* Prelaoder */
-#preloader {
-    position: fixed;
-    left: 0;
-    top: 0;
-    z-index: 999;
-    width: 100%;
-    height: 100%;
-    overflow: visible;
-    background: #fff url("/assets/images/preloader.svg") no-repeat center center;
-}
-
-/* Sections Header
---------------------------------*/
-.section-header .section-title {
-    font-size: 32px;
-    color: #111;
-    text-transform: uppercase;
-    text-align: center;
-    font-weight: 700;
-    margin-bottom: 5px;
-}
-
-.section-header .section-description {
-    text-align: center;
-    padding-bottom: 40px;
-    color: #999;
-}
-
-
-
-
-/* Back to top button */
-.back-to-top {
-    position: fixed;
-    display: none;
-    background: rgba(0, 0, 0, 0.2);
-    color: #fff;
-    padding: 6px 12px 9px 12px;
-    font-size: 16px;
-    border-radius: 2px;
-    right: 15px;
-    bottom: 15px;
-    transition: background 0.5s;
-}
-
-@media (max-width: 768px) {
-    .back-to-top {
-        bottom: 15px;
-    }
-}
-
-.back-to-top:focus {
-    background: rgba(0, 0, 0, 0.2);
-    color: #fff;
-    outline: none;
-}
-
-.back-to-top:hover {
-    background: $primary;
-    color: #fff;
-}
-
-
-
-
-
-
-/*--------------------------------------------------------------
-# Hero Section
---------------------------------------------------------------*/
-#hero { 
-    width: 100%;
-    height: 100vh; 
-    display: flex;   
-    position: relative;
-    z-index: 1;
-    align-items: center; 
-    text-align: center;
-
-    color: #fff;
-}
-
-#hero .hero-container {  
-    display: table-cell;  
-    width:100%;
-    margin: 0; 
-    padding: 0 10px;  
-    align-items: center; 
-    text-align: center;
-} 
-
-#hero .hero-container .sc-text {   
-    width:80%; 
-    margin-left: 10%;
-} 
-
-#hero .color-overlay {
-    width: 100%;
-    height: 100%;
-    background: $primary;
-    opacity: .5;
-    position: absolute;
-    z-index: -1;
-} 
-
-#hero h1 {
-    margin: 30px 0 10px 0;
-    font-size: 48px;
-    font-weight: 700;
-    line-height: 56px;
-    text-transform: uppercase;
-}
-
-/*#hero .hero-h1{
-  color: #fff;  
-  text-shadow: 0 0 5px $primary, 0 0 5px #fff ; 
-}
-
-#hero a{
-  color: #fff;  
-  text-shadow: 0 0 5px $primary, 0 0 5px #fff ; 
-}
-
-#hero h2{
-  color: #fff;  
-  text-shadow: 0 0 0.5px $primary, 0 0 0.5px #fff, 0 0 0.5px #000 ; 
-}
-
-#hero p{
-  color: #111;  
-  text-shadow: 0 0 0.2px $primary, 0 0 0.2px #fff, 0 0 0.2px #000 ; 
-}*/ 
-
-#hero .hero-products { 
-    display: table-cell;  
-    padding: 0 10px; 
-    padding-top: 100px;  
-    text-align: center;
-    vertical-align: middle;
-
-    color: #111; 
-}
-
-.font-alt {
-    font-family: "Roboto Condensed", sans-serif;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-}
-
-@media (max-width: 768px) {
-    #hero h1 {
-        font-size: 28px;
-        line-height: 36px;
-    }
-}
-
-#hero h2 {
-    color: #eee;
-    margin-bottom: 50px;
-    font-size: 24px;
-}
-
-@media (max-width: 768px) {
-    #hero h2 {
-        font-size: 18px;
-        line-height: 24px;
-        margin-bottom: 30px;
-    }
-}
-
-#hero .btn-get-started {
-    font-family: "Poppins", sans-serif;
-    text-transform: uppercase;
-    font-weight: 500;
-    font-size: 16px;
-    letter-spacing: 1px;
-    display: inline-block;
-    padding: 8px 28px;
-    border-radius: 50px;
-    transition: 0.5s;
-    margin: 10px;
-    border: 2px solid #fff;
-    color: #fff;
-}
-
-#hero .btn-get-started:hover {
-    background: $primary;
-    border: 2px solid $primary;
-}
-
-
-
-
-/*--------------------------------------------------------------
-# Sections
---------------------------------------------------------------*/
-
-/* Facts Section
---------------------------------*/
-#facts {
-    background: #f7f7f7;
-    padding: 80px 0 60px 0;
-}
-
-#facts .counters span {
-    font-size: 48px;
-    display: block;
-    color: $primary;
-}
-
-#facts .counters p {
-    padding: 0;
-    margin: 0 0 20px 0;
-    font-family: "Poppins", sans-serif;
-    font-size: 14px;
-}
-
-/* Services Section
---------------------------------*/
-#services {
-    background: #fff;
-    background-size: cover;
-    padding: 80px 0 60px 0;
-}
-
-#services .box {
-    padding: 50px 20px;
-    margin-bottom: 50px;
-    text-align: center;
-    border: 1px solid #e6e6e6;
-    height: 200px;
-    position: relative;
-    background: #fafafa;
-}
-
-#services .icon {
-    position: absolute;
-    top: -36px;
-    left: calc(50% - 36px);
-    transition: 0.2s;
-    border-radius: 50%;
-    display: inline-block;
-    border: 6px solid #fff;
-}
-
-#services .icon a {
-    display: inline-block;
-    background: $primary;
-    border: 2px solid $primary;
-    padding: 16px;
-    border-radius: 50%;
-    transition: 0.3s;
-}
-
-#services .icon i {
-    color: #fff;
-    font-size: 24px;
-}
-
-#services .box:hover .icon i {
-    color: $primary;
-}
-
-#services .box:hover .icon a {
-    color: $primary;
-    background: #fff;
-}
-
-#services .title {
-    font-weight: 700;
-    font-size: 18px;
-    margin-bottom: 15px;
-    text-transform: uppercase;
-}
-
-#services .title a {
-    color: #111;
-}
-
-#services .description {
-    font-size: 14px;
-    line-height: 24px;
-}
-
-/* Call To Action Section
---------------------------------*/
-#call-to-action {
-    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(/assets/images/call-to-action-bg.jpg) fixed center center;
-    background-size: cover;
-    padding: 80px 0;
-}
-
-#call-to-action .cta-title {
-    color: #fff;
-    font-size: 28px;
-    font-weight: 700;
-}
-
-#call-to-action .cta-text {
-    color: #fff;
-}
-
-@media (min-width: 769px) {
-    #call-to-action .cta-btn-container {
-        display: flex;
-        align-items: center;
-        justify-content: flex-end;
-    }
-}
-
-#call-to-action .cta-btn {
-    font-family: "Poppins", sans-serif;
-    text-transform: uppercase;
-    font-weight: 500;
-    font-size: 16px;
-    letter-spacing: 1px;
-    display: inline-block;
-    padding: 8px 30px;
-    border-radius: 50px;
-    transition: 0.5s;
-    margin: 10px;
-    border: 2px solid $primary;
-    color: #fff;
-    text-shadow: 0 0 5px $primary, 0 0 5px #fff ; 
-}
-
-#call-to-action .cta-btn:hover {
-    background: $primary;
-    border: 2px solid $primary;
-}
-
-#call-to-action label {
-    padding-top: 15px;
-    color: #fff;
-    text-shadow: 0 0 5px $primary, 0 0 5px #fff ; 
-}
-
-
-/* Team Section
---------------------------------*/
-#team {
-    background: #fff;
-    padding: 80px 0 60px 0;
-}
-
-#team .member {
-    text-align: center;
-    margin-bottom: 20px;
-}
-
-#team .member .pic {
-    margin-bottom: 15px;
-    overflow: hidden;
-    height: 260px;
-}
-
-#team .member .pic img {
-    max-width: 100%;
-}
-
-#team .member h4 {
-    font-weight: 700;
-    margin-bottom: 2px;
-    font-size: 18px;
-}
-
-#team .member span {
-    font-style: italic;
-    display: block;
-    font-size: 13px;
-}
-
-#team .member .social {
-    margin-top: 15px;
-}
-
-#team .member .social a {
-    color: #b3b3b3;
-}
-
-#team .member .social a:hover {
-    color: $primary;
-}
-
-#team .member .social i {
-    font-size: 18px;
-    margin: 0 2px;
-}
-
-
