--- a/frontend/src/theme.scss
+++ b/frontend/src/theme.scss
@@ -1,13 +1,15 @@
-
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800%7CShadows+Into+Light');
+@import url('http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext') ;
 /*!
- * HiSolution.scss v1.0.0 
+ * HiSolution Theme SCSS v1.0.0 
  * Copyright 2018 Heritage Innovative Solutions 
- * Theme
+ * Author     : gdenzilg@gmail.com
  */ 
-
-$primary: #3F26BB;
-$secondary: rgba(0, 0, 0, 0.117647);
-$primary-tint-1: #3F94E9;
+//$font-family: "Open Sans", "Arial", sans-serif;
+$font-family: "Lato", "Open Sans", sans-serif;
+$primary-color-light: #634BDA; 
+$primary-color: #3F26BB; 
+$primary-color-dark: #311d91;  
 $text:rgba(26, 35, 38, 0.8);
 $box-shadow: 0 1px 16px 0 rgba(0, 0, 0, 0.2), 0 2px 8px 0 rgba(0, 0, 0, 0.14), 0 4px 8px -1px rgba(0, 0, 0, 0.12);
-$tab-border: 1px solid $secondary;
+$tab-border: 1px solid $primary-color-light;
