Succesifully configured AWS S3 Storage

--- a/frontend/src/app/core/components/home/home.component.html
+++ b/frontend/src/app/core/components/home/home.component.html
@@ -7,7 +7,7 @@
 <!--========================== 
   Hero Section
 ============================-->
-<section id="hero" style="background: url(/assets/images/bgf2.gif) top center fixed; background-size: 100vw;">
+<section id="hero"  >
     <div class="hero-container">
         <div style="padding-top: 120px;" ></div> 
         <h1 class="hero-h1">Welcome</h1> 
@@ -86,7 +86,7 @@
 <!--==========================
   Facts Section
 ============================-->
-<section id="facts">
+<section id="facts-section">
     <div class="container wow fadeIn">
         <div class="section-header">
             <h3 class="section-title">Facts</h3>
@@ -117,12 +117,12 @@
         </div>
 
     </div>
-</section><!-- #facts -->
+</section><!-- #facts-section -->
 
 <!--==========================
 Call To Action Section
 ============================-->
-<section id="call-to-action">
+<section id="call-to-action-section">
     <div class="container wow fadeIn">
         <div class="row">
             <div class="col-lg-9 text-center text-lg-left">
@@ -141,9 +141,5 @@ Call To Action Section
         </div>
 
     </div>
-</section><!-- #call-to-action --> 
+</section><!-- #call-to-action-section --> 
  
-
- <!--Footer--> 
-<app-footer></app-footer>
- <!--/Footer--> 
