--- a/frontend/src/app/site/service-category/component/view/service-category-view.component.html
+++ b/frontend/src/app/site/service-category/component/view/service-category-view.component.html
@@ -43,7 +43,7 @@
     <!--==========================
     Call To Action Section
     ============================-->
-    <section id="call-to-action">
+    <section id="call-to-action-section">
         <div class="container wow fadeIn">
             <div class="row">
                 <div class="col-lg-9 text-center text-lg-left">
@@ -56,7 +56,7 @@
             </div>
 
         </div>
-    </section><!-- #call-to-action -->
+    </section><!-- #call-to-action-section -->
 
 
 </main>
