--- a/frontend/src/tab-panel.scss
+++ b/frontend/src/tab-panel.scss
@@ -5,7 +5,7 @@
  * Author     : dgumbo
  */  
 
-@import './theme.scss' ; 
+@import './styles-theme.scss' ; 
 
 .tab {
     border-left: $tab-border;
