--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -9,5 +9,8 @@
  <!--/Content-->   
 
  <!--Footer--> 
-<!--<app-footer></app-footer>-->
+<app-footer></app-footer>
  <!--/Footer--> 
+  
+<!-- back to top button -->
+<a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
