--- a/frontend/src/app/core/components/footer/footer.component.scss
+++ b/frontend/src/app/core/components/footer/footer.component.scss
@@ -1,12 +1,17 @@
-@import "../../../../theme.scss";
+@import "../../../../styles-theme.scss";
 
 /* #Footer */
 #footer {
 	background: #0e0e0e;
+        
+/*        background-color: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)) ;
+        background-image: url(/assets/images/footer-img.jpg);   
+        background-position: center;
+        background-size: cover;*/
+        
 	border-top: 4px solid #0e0e0e;
-	font-size: 0.9em;
-	margin-top: 50px;
-	padding: 70px 0 0;
+	font-size: 90%;
+	margin-top: 50px; 
 	position: relative;
 	clear: both;
 }
@@ -20,155 +25,6 @@
 	box-shadow: none;
 }
 
-#footer a:hover {
-	color: #CCC;
-}
-
-#footer h1, #footer h2, #footer h3, #footer h4, #footer a {
-	color: #FFF;
-}
-
-#footer h4 {
-	font-size: 1.8em;
-	font-weight: 200;
-}
-
-#footer h5 {
-	color: #CCC;
-}
-
-#footer ul.nav-list > li a {
-	border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-	line-height: 20px;
-	padding-bottom: 11px;
-}
-
-#footer ul.nav-list > li:last-child a {
-	border-bottom: 0;
-}
-
-#footer ul.nav-list > li a:hover {
-	background-color: rgba(255, 255, 255, 0.05);
-}
-
-#footer ul.list.icons li {
-	margin-bottom: 5px;
-}
-
-#footer form {
-	opacity: 0.85;
-}
-
-#footer form label.error {
-	line-height: 16px;
-	margin: 5px 0 -5px;
-	display: block;
-	clear: both;
-}
-
-#footer form .alert {
-	padding: 6px;
-	text-align: center;
-}
-
-#footer .footer-ribbon {
-	background: $primary-color;
-	position: absolute;
-	margin: -90px 0 0 14px;
-	padding: 10px 20px 6px 20px;
-}
-
-#footer .footer-ribbon:before {
-	border-right: 10px solid #813DCB;
-	border-top: 16px solid transparent;
-	content: "";
-	display: block;
-	height: 0;
-	right: 100%;
-	position: absolute;
-	top: 0;
-	width: 7px;
-}
-
-#footer .footer-ribbon span {
-	color: #FFF;
-	font-size: 1.6em;
-	font-family: "Shadows Into Light", cursive;
-}
-
-#footer .newsletter form {
-	width: 100%;
-	max-width: 262px;
-}
-
-#footer .alert a {
-	color: #222;
-}
-
-#footer .alert a:hover {
-	color: #666;
-}
-
-
-#footer .twitter .meta {
-	color: #999;
-	display: block;
-	font-size: 0.9em;
-	padding-top: 3px;
-}
-
-#footer .twitter ul {
-	list-style: none;
-	margin: 0;
-	padding: 0;
-}
-
-#footer .twitter ul li {
-	padding-bottom: 20px;
-}
-
-#footer .twitter ul li:last-child {
-	padding-bottom: 0;
-}
-
-#footer .twitter-account {
-	color: #FFF;
-	display: block;
-	font-size: 0.9em;
-	margin: -15px 0 5px;
-	opacity: 0.55;
-}
-
-#footer .twitter-account:hover {
-	opacity: 1;
-}
-
-#footer .contact {
-	list-style: none;
-	margin: 0;
-	padding: 0;
-}
-
-#footer .contact i {
-	display: block;
-	float: left;
-	font-size: 1.2em;
-	margin: 7px 8px 10px 0;
-	position: relative;
-	text-align: center;
-	top: -2px;
-	width: 16px;
-}
-
-#footer .contact i.fa-envelope {
-	font-size: 1em;
-	top: 0;
-}
-
-#footer .contact p {
-	margin-bottom: 10px;
-}
-
 #footer .logo {
 	display: block;
 }
@@ -178,9 +34,9 @@
 }
 
 #footer .footer-copyright {
-	background: #060606;
+	//background: #060606;
 	border-top: 4px solid #060606;
-	margin-top: 40px;
+	/*margin-top: 40px;*/
 	padding: 30px 0 10px;
 }
 
@@ -207,105 +63,10 @@
 	padding-left: 0;
 }
 
-#footer .footer-copyright p {
-	color: #555;
+#footer .footer-copyright p { 
 	margin: 0;
 	padding: 0;
-}
-
-#footer .phone {
-	color: #FFF;
-	font-size: 26px;
-	font-weight: bold;
-	display: block;
-	padding-bottom: 15px;
-	margin-top: -5px;
-}
-
-#footer .narrow-phone {
-	text-align: right;
-	margin: -2px 0 0 0;
-}
-
-#footer .narrow-phone .phone {
-	font-size: 16px;
-	padding-bottom: 0;
-	margin-top: -13px;
-}
-
-#footer .recent-work {
-	list-style: none;
-	padding: 0;
-	margin: 0;
-}
-
-#footer .recent-work li {
-	float: left;
-	width: 30%;
-	margin: 10px 3% 0 0;
-}
-
-#footer .recent-work img {
-	border: 0;
-	width: 100%;
-	filter: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'><filter id='grayscale'><feColorMatrix type='matrix' values='0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0'/></filter></svg>#grayscale");
-	filter: gray;
-	-webkit-filter: grayscale(100%);
-}
-
-#footer .recent-work .img-thumbnail-hover-icon {
-	border: 0;
-}
-
-#footer .recent-work .img-thumbnail-hover-icon:after {
-	font-size: 22px;
-	margin-left: -2px;
-}
-
-#footer .view-more-recent-work {
-	padding: 12px;
-}
-
-#footer.short {
-	padding-top: 50px;
-}
-
-#footer.short .footer-copyright {
-	background: transparent;
-	border: 0;
-	padding-top: 0;
-	margin-top: 0;
-}
-
-#footer.light {
-	padding-top: 60px;
-	background: #FFF;
-	border-top: 1px solid #DDD;
-}
-
-#footer.light .footer-ribbon {
-	margin-top: -76px;
-	margin-left: 14px;
-}
-
-#footer.light .footer-copyright {
-	margin-top: 15px;
-	background: #FFF;
-	border-top: 1px solid #DDD;
-}
-
-#footer.light .footer-copyright p {
-	color: #777;
-}
-
-#footer.light .phone,
-#footer.light .twitter-account {
-	color: #777;
-}
-
-#footer.light ul.nav-pills > li > a.active {
-	color: #FFF;
-}
+}      
 
 #footer.narrow {
 	padding-top: 30px;
@@ -320,15 +81,15 @@
 }
 
 #footer.color {
-	color: #FFF;
+	color: #fff;
 }
 
 #footer.color p {
-	color: #FFF;
+	color: #fff;
 }
 
 #footer.color .footer-copyright nav ul li {
-	border-left-color: #FFF;
+	border-left-color: #fff;
 }
 
 #footer.footer-reveal {
@@ -339,39 +100,3 @@
 	z-index: -10;
 }
 
-/* Responsive */
-@media (max-width: 991px) {
-	#footer .phone {
-		font-size: 20px;
-	}
-}
-
-@media (max-width: 767px) {
-  /* Footer */
-	#footer .phone {
-		font-size: 20px;
-	}
-}
-
-
-#footer .twitter .fa, #footer .twitter .fas, #footer .twitter .far, #footer .twitter .fal, #footer .twitter .fab, #footer .twitter .icons {
-	clear: both;
-	font-size: 1.5em;
-	position: relative;
-	top: 3px;
-}
-  
-
-#footer .social-icons a {
-  font-size: 18px;
-  display: inline-block;
-  background: #333;
-  color: #fff;
-  line-height: 1;
-  padding: 8px 0;
-  border-radius: 50%;
-  text-align: center;
-  width: 36px;
-  height: 36px;
-  transition: 0.3s;
-}
