--- a/frontend/src/app/core/components/landing/landing.component.html
+++ b/frontend/src/app/core/components/landing/landing.component.html
@@ -28,54 +28,181 @@
         </div>
     </nav>
 
-    <div class="hero-container">        
-        <h1 class="hero-h1">Welcome</h1> 
-        <h2 class="hero-h2">We are a team of talented professionals.</h2>
-        <a class="btn btn-full" href="#">Interested ?</a>
-        <a class="btn btn-ghost" href="#">Show Me More !</a>
+    <div class="hero-container">     
+        <div class="hero-title">        
+            <h1 class="hero-h1">Welcome</h1> 
+            <h2 class="hero-h2">We are a team of talented professionals.</h2> 
+            <a class="btn-get-started" href="#">Show Me More !</a>
+        </div> 
+
+        <div class="hero-services" 
+             *ngIf="globals.serviceCategories && globals.serviceCategories.length >= 1" >      
+
+            <div id="serviceCategoryCarousel" class="hero-services-carousel-slide carousel slide"  align="center" 
+                 data-ride="carousel" 
+                 *ngIf="globals.serviceCategories && globals.serviceCategories.length >= 1">
+
+                <ol class="carousel-indicators">
+                    <li data-target="#serviceCategoryCarousel" 
+                        *ngFor="let serviceCategory of globals.serviceCategories; let i = index" 
+                        [attr.data-slide-to]="i" 
+                        class="{{ i==0 ? 'active' : '' }}" ></li>
+                </ol>
+
+                <div class="hero-services-carousel-inner carousel-inner" >
+                    <div *ngFor="let sc of globals.serviceCategories; let i = index" 
+                        class="carousel-item {{ i==0 ? 'active' : '' }}"  >
+                        <div class="hero-services-carousel-caption carousel-caption d-none d-md-block" >
+                            <h1 class="hero-services-h1">We Offer <span [innerHtml]="sc.name"></span>.</h1>
+                            <p class="hero-services-p" [innerHtml]="sc.description"></p> 
+                        </div>
+                    </div> 
+                </div>
+
+                <a class="carousel-control-prev" href="#serviceCategoryCarousel" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#serviceCategoryCarousel" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
     </div>
 </header>
 <!-- #header -->
 
+
 <!--==========================
-  Services Section
+  Our Services Section
 ============================-->
-<section id="section-services" > 
-    <div class="row">
-        <h2 class="section-h2">What we offer.</h2>
-        <p class="long-copy">
-            We are continuously growing and expanding our internal capabilities and our industry relationship partners so that when combined, we offer one of the broadest and most experienced range of services. 
-        </p>
+<section id="services-section" *ngIf="globals.serviceCategories && globals.serviceCategories.length >= 1" > 
+    <div class="container wow fadeIn">
+        <div class="section-header">
+            <h3 class="section-title">What we offer.</h3>
+            <p class="long-copy">
+                We are continuously growing and expanding our internal capabilities and our industry relationship partners so that when combined, we offer one of the broadest and most experienced range of services. 
+            </p>
+        </div>
+        <div class="row">
+            <div class="col col-lg-4 col-md-6  wow fadeInUp"
+                 data-wow-delay="0.2s"
+                 *ngFor="let sc of globals.serviceCategories" >
+                 <div class="box">
+                    <div class="icon"><a [routerLink]="'/services/+sc.name'"><i class="fa {{sc.faIcon}}"></i></a></div>
+                    <h3 class="title"><a [routerLink]="'/services/+sc.name'" >{{sc.name}}</a></h3> 
+                    <p class="description" [innerHtml]="sc.shortDescription"></p>
+                </div>
+            </div>  
+        </div> 
     </div>
-    <div class="row">
-        <div class="col span-1-of-3" >
-            <div class="box">
-                <div class="icon"><a [routerLink]="'/services/+sc.name'"><i class="fa fa-desktop"></i></a></div>
-                <h3 class="title"><a [routerLink]="'/services/+sc.name'" >Web Dev</a></h3> 
-                <p class="description">Lorem ipsum is a pseudo-Latin text used in web design, typography, layout, and printing in place of English to emphasise design elements over content.</p>
-            </div>
-        </div> 
-        <div class="col span-1-of-3" >
-            <div class="box">
-                <div class="icon"><a [routerLink]="'/services/+sc.name'"><i class="fa fa-desktop"></i></a></div>
-                <h3 class="title"><a [routerLink]="'/services/+sc.name'" >Hosting</a></h3> 
-                <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-            </div>
-        </div> 
-        <div class="col span-1-of-3" >
-            <div class="box">
-                <div class="icon"><a [routerLink]="'/services/+sc.name'"><i class="fa fa-desktop"></i></a></div>
-                <h3 class="title"><a [routerLink]="'/services/+sc.name'" >Security</a></h3> 
-                <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            </div>
-        </div> 
-        <div class="col span-1-of-3" >
-            <div class="box">
-                <div class="icon"><a [routerLink]="'/services/+sc.name'"><i class="fa fa-desktop"></i></a></div>
-                <h3 class="title"><a [routerLink]="'/services/+sc.name'" >Publishing</a></h3> 
-                <p class="description">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            </div>
-        </div> 
-    </div> 
 </section>
 <!-- #services -->
+
+
+<!--==========================
+  Facts Section
+============================-->
+<section id="facts-section">
+    <div class="container wow fadeIn">
+        <div class="section-header">
+            <h3 class="section-title">Facts</h3>
+            <p class="section-description">Even though the company is fairly young, we have had our fair share of projects and responsibilities, and we do have quite a few projects out there.</p>
+        </div>
+        <div class="row counters">
+
+            <div class="col-lg-3 col-6 text-center">
+                <span data-toggle="counter-up">5</span>
+                <p>Clients</p>
+            </div>
+
+            <div class="col-lg-3 col-6 text-center">
+                <span data-toggle="counter-up">15</span>
+                <p>Projects</p>
+            </div>
+
+            <div class="col-lg-3 col-6 text-center">
+                <span data-toggle="counter-up">463</span>
+                <p>Hours Of Support</p>
+            </div>
+
+            <div class="col-lg-3 col-6 text-center">
+                <span data-toggle="counter-up">5</span>
+                <p>Hard Workers</p>
+            </div>
+
+        </div>
+
+    </div>
+</section><!-- #facts-section -->
+
+
+<!--==========================
+Call To Action Section
+============================-->
+<section id="call-to-action-section">
+    <div class="container wow fadeIn">
+        <div class="section-header">
+            <h3 class="section-title">Step into the future of technology!</h3> 
+            <p class="cta-text">Give us a call and we will show you how! Or give us your details, and we will contact you.</p>        
+        </div> 
+    </div>
+</section><!-- #call-to-action-section --> 
+
+
+<!--==========================
+Get In Touch Section
+============================-->
+<section id="get-in-touch-section">
+    <div class="container">
+        <div class="row">
+            <div class="get-in-touch-ribbon">
+                <span>Get in Touch</span>
+            </div>
+            <div class="col-xl-5 col-lg-4 col-md-8">
+                <div class="newsletter">
+                    <h4>Newsletter</h4>
+                    <p>Keep up on our always evolving product features and technology. Enter your e-mail and subscribe to our newsletter.</p>
+
+                    <div class="alert alert-success d-none" id="newsletterSuccess">
+                        <strong>Success!</strong> You've been added to our email list.
+                    </div>
+
+                    <div class="alert alert-danger d-none" id="newsletterError"></div>
+
+                    <form id="newsletterForm" action="php/newsletter-subscribe.php" method="POST" novalidate="novalidate">
+                        <div class="input-group">
+                            <input class="form-control form-control-sm" placeholder="Email Address" name="newsletterEmail" id="newsletterEmail" type="text">
+                            <span class="input-group-append">
+                                <button class="btn btn-light" type="submit">Go!</button>
+                            </span>
+                        </div>
+                    </form>
+                </div>
+            </div> 
+            <div class="col-xl-5 col-lg-5 col-md-8">
+                <div class="contact-details">
+                    <h4>Contact Us</h4>
+                    <ul class="contact">
+                        <li><p><i class="fa fa-map-marker"></i> <strong>Address : </strong> 14657 Galloway Park, Norton, Zimbabwe</p></li>
+                        <li><p><i class="fa fa-envelope"></i> <strong>Email : </strong> <a href="mailto:info@hisolutions.co.zw">info@hisolutions.co.zw</a></p></li>
+                        <li><p><i class="fa fa-phone"></i> <strong>Phone : </strong>(+263) 783 989 510, (+236) 782 734 708 </p></li>  
+                    </ul>
+                </div>
+            </div>
+            <div class="col-xl-2 col-lg-3 col-md-6">
+                <div class="follow-us">
+                    <h4>Follow Us</h4>
+                    <ul class="social-icons">
+                        <li class="social-icons-facebook"><a href="#" target="_blank" title="Facebook"><i class="fa fa-facebook"></i>&nbsp;&nbsp;&nbsp; hisolutions</a></li>
+                        <li class="social-icons-twitter"><a href="#" target="_blank" title="Twitter"><i class="fa fa-twitter"></i>&nbsp;&nbsp; @hisolutions</a></li>
+                        <li class="social-icons-linkedin"><a href="#" target="_blank" title="Linkedin"><i class="fa fa-linkedin"></i>&nbsp;&nbsp; hisolutions</a></li>                     
+                        <li class="social-icons-linkedin"><a href="#" target="_blank" title="Instagram"><i class="fa fa-instagram"></i>&nbsp;&nbsp; #hisolutions</a></li>
+                        <li class="social-icons-linkedin"><a href="#" target="_blank" title="Google-Plus"><i class="fa fa-google-plus"></i>&nbsp; @hisolutions</a></li> 
+                    </ul> 
+                </div>
+            </div>
+        </div>
+    </div>
+</section><!-- #get in touch section --> 
