testing aws auto deploy

--- a/frontend/src/app/core/components/footer/footer.component.html
+++ b/frontend/src/app/core/components/footer/footer.component.html
@@ -5,7 +5,7 @@
     <div class="footer-copyright">
         <div class="container">
             <div class="row">
-                <div class="col-lg-1 col-sm-4">
+                <div class="col-xl-1 col-lg-1 col-md-2 col-sm-3 footer-img">
                     <a routerLink="/" class="logo">
                         <img alt="Heritage Innovative Solutions" class="img-fluid" src="../assets/images/logo.png">
                     </a>
