--- a/frontend/src/styles-media-queries.scss
+++ b/frontend/src/styles-media-queries.scss
@@ -4,30 +4,240 @@
  * Author     : gdenzilg@gmail.com
  */  
 
-/* Back To Top Button */
-@media (max-width: 768px) {
-    .back-to-top {
-        bottom: 15px;
+
+/* big tablets & laptops : 1200px */
+@media only screen and (max-width: 1199px){
+    /* Header Components*/
+    .hero-h1 { 
+        margin-bottom: 19.5px; 
+        font-size: 235%;   
+        word-spacing: 4.5px; 
     }
-}
 
+    .hero-h2 { 
+        margin-bottom: 19.5px;
+        font-size: 135%; 
+    }
 
-/* big tablets laptops : 1200px */
-@media only screen and (max-width: 1200px){
-    
+    .hero-title{ 
+        padding-top : 25px;
+    }
+
+    .hero-p {  
+        font-size: 113%;
+        min-height: 120px;
+    }
+
+    .hero-services-carousel-slide{  
+        width: 96vw;
+    }
+
+    .hero-services-carousel-inner{ 
+        width:85%;
+    }
+    /* End Header Components*/
+
+    section{ 
+        padding: 50px 0 ;
+    }
+
+    .container { 
+        padding-right: 14px;
+        padding-left: 14px; 
+    }
+
+    .section-header { 
+        padding-bottom: 30px; 
+        margin-bottom: 30px;  
+    }
+
+    .section-description { 
+        line-height: 140%;
+        width: 780px; 
+    }  
+
+    .btn-light, #newsletterEmail{  
+        height: 38px;
+        border-width: 1.8px;
+    }
+
+    .btn-light{
+        border-left-width: 0.7px;
+    }
+
+    #newsletterEmail{
+        border-right-width: 0.7px; 
+    }
 }
 
 /* small to big tablets : 768 to 1023px */
 @media only screen and (max-width: 1023px){
-    
+
+    body{ font-size: 18px ; }
+
+    section{  padding: 40px 0 ;   }
+
+    .container { 
+        padding-left: 4px; 
+        padding-right: 4px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .section-header { 
+        padding-bottom: 28px; 
+        margin-bottom: 28px;  
+    }
+
+    .section-description { 
+        line-height: 120%;
+        width: 720px; 
+    }  
+
+    /* Header Components*/
+    .hero-h1 { 
+        margin-bottom: 19.5px; 
+        font-size: 235%;   
+        word-spacing: 4.5px; 
+    }
+
+    .hero-h2 { 
+        margin-bottom: 19.5px;
+        font-size: 135%; 
+    }
+
+    .hero-title{ 
+        padding-top : 25px;
+    }
+
+    .hero-p {  
+        font-size: 113%;
+        min-height: 120px;
+    }
+
+    .hero-services-carousel-slide{  
+        width: 96vw;
+    }
+
+    .hero-services-carousel-inner{ 
+        width:85%;
+    }
+    /* End Header Components*/
 }
 
-/* small phones to small tablets : 481 to 767px */
+/* big phones to small tablets : 481 to 767px */
 @media only screen and (max-width: 767px){
-    
+
+    body { font-size: 16px; }
+    section{ padding: 30px 0 ;   }
+
+    /* Back To Top Button */ 
+    .back-to-top {
+        bottom: 17px;
+    } 
+
+    .container { 
+        padding-left: 2.5px; 
+        padding-right: 2.5px;
+        margin-left: auto;
+        margin-right: auto; 
+    }
+
+    .section-header { 
+        padding-bottom: 15px; 
+        margin-bottom: 15px;  
+    }
+
+    .section-description { 
+        line-height: 115%;
+        width: 460px; 
+    }   
+    /* Header Components*/
+    .hero-h1 { 
+        margin-bottom: 15px; 
+        font-size: 220%;   
+        word-spacing: 3.5px; 
+    }
+
+    .hero-h2 { 
+        margin-bottom: 15px;
+        font-size: 120%; 
+    }
+
+    .hero-title{ 
+        padding-top : 15px;
+    }
+
+    .hero-p {  
+        font-size: 100%;
+        min-height: 100px;
+    }
+
+    .hero-services-carousel-slide{  
+        width: 96vw;
+    }
+
+    .hero-services-carousel-inner{ 
+        width:85%;
+    }
+    /* End Header Components*/
 }
 
 /* small phones : 0 to 480px */
-@media only screen and (max-width: 480px){
-    
+@media only screen and (max-width: 479px){ 
+    section {  padding: 10px 0;   } 
+
+    .container { 
+        padding-right: 1px;
+        padding-left: 1px; 
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .section-header { 
+        padding-bottom: 20px; 
+        margin-bottom: 20px;  
+    }
+
+    .section-title {
+        margin-bottom: 15px;
+    }
+
+    .section-description { 
+        line-height: 115%;
+        width: 344px; 
+    }  
+
+    #facts-section .counters p { 
+        margin-bottom: 5px;
+    }
+    /* Header Components*/
+    .hero-h1 { 
+        margin-bottom: 19.5px; 
+        font-size: 235%;   
+        word-spacing: 4.5px; 
+    }
+
+    .hero-h2 { 
+        margin-bottom: 19.5px;
+        font-size: 135%; 
+    }
+
+    .hero-title{ 
+        padding-top : 25px;
+    }
+
+    .hero-p {  
+        font-size: 113%;
+        min-height: 120px;
+    }
+
+    .hero-services-carousel-slide{  
+        width: 96vw;
+    }
+
+    .hero-services-carousel-inner{ 
+        width:85%;
+    }
+    /* End Header Components*/
 }
