--- a/frontend/src/styles-media-queries.scss
+++ b/frontend/src/styles-media-queries.scss
@@ -28,17 +28,30 @@
         min-height: 120px;
     }
 
-    .hero-services-carousel-slide{  
-        width: 96vw;
+    .hero-services-h1{  
+        font-size: 180%;   
+        word-spacing: 4px; 
     }
+ 
+/*    .hero-services-carousel-slide{  
+        width: 96vw;
+    }*/
 
     .hero-services-carousel-inner{ 
         width:85%;
+    }
+    
+    .carousel-control-prev, .carousel-control-next { 
+        width: 9%; 
     }
     /* End Header Components*/
 
     section{ 
         padding: 50px 0 ;
+    }
+    
+    #call-to-action-section .section-title { 
+        font-weight: 420;
     }
 
     .container { 
@@ -76,6 +89,10 @@
     body{ font-size: 18px ; }
 
     section{  padding: 40px 0 ;   }
+    
+    #call-to-action-section .section-title { 
+        font-weight: 400;
+    }
 
     .container { 
         padding-left: 4px; 
@@ -96,9 +113,14 @@
 
     /* Header Components*/
     .hero-h1 { 
-        margin-bottom: 19.5px; 
-        font-size: 235%;   
-        word-spacing: 4.5px; 
+        margin-bottom: 15px; 
+        font-size: 200%;   
+        word-spacing: 4px; 
+    }
+
+    .hero-services-h1 {  
+        font-size: 160%;   
+        word-spacing: 3.5px; 
     }
 
     .hero-h2 { 
@@ -115,12 +137,16 @@
         min-height: 120px;
     }
 
-    .hero-services-carousel-slide{  
+/*    .hero-services-carousel-slide{  
         width: 96vw;
-    }
+    }*/
 
     .hero-services-carousel-inner{ 
-        width:85%;
+        width:90%;
+    }
+    
+    .carousel-control-prev, .carousel-control-next { 
+        width: 6%; 
     }
     /* End Header Components*/
 }
@@ -142,6 +168,11 @@
         margin-left: auto;
         margin-right: auto; 
     }
+    
+    #call-to-action-section .section-title { 
+        font-weight: 390; 
+        font-size: 175%;
+    }
 
     .section-header { 
         padding-bottom: 15px; 
@@ -152,11 +183,17 @@
         line-height: 115%;
         width: 460px; 
     }   
-    /* Header Components*/
+    
+    /* Header Components*/ 
     .hero-h1 { 
-        margin-bottom: 15px; 
-        font-size: 220%;   
+        margin-bottom: 12px; 
+        font-size: 180%;   
         word-spacing: 3.5px; 
+    }
+
+    .hero-services-h1 {  
+        font-size: 150%;   
+        word-spacing: 3px; 
     }
 
     .hero-h2 { 
@@ -172,13 +209,13 @@
         font-size: 100%;
         min-height: 100px;
     }
-
-    .hero-services-carousel-slide{  
-        width: 96vw;
-    }
-
+ 
     .hero-services-carousel-inner{ 
-        width:85%;
+        width:94%;
+    }
+    
+    .carousel-control-prev, .carousel-control-next { 
+        width: 5.5%; 
     }
     /* End Header Components*/
 }
@@ -186,6 +223,10 @@
 /* small phones : 0 to 480px */
 @media only screen and (max-width: 479px){ 
     section {  padding: 10px 0;   } 
+    
+    #call-to-action-section .section-title { 
+        font-size: 160%;
+    }
 
     .container { 
         padding-right: 1px;
@@ -211,6 +252,7 @@
     #facts-section .counters p { 
         margin-bottom: 5px;
     }
+    
     /* Header Components*/
     .hero-h1 { 
         margin-bottom: 19.5px; 
@@ -230,14 +272,23 @@
     .hero-p {  
         font-size: 113%;
         min-height: 120px;
-    }
-
-    .hero-services-carousel-slide{  
-        width: 96vw;
-    }
+    } 
 
     .hero-services-carousel-inner{ 
-        width:85%;
+        width:97%;
+    }
+    
+    .carousel-control-prev, .carousel-control-next { 
+        width: 5%; 
     }
     /* End Header Components*/
+}
+
+
+@media only screen and (max-width: 575px){ 
+    #footer {  
+            margin-top: 0px; 
+            position: absolute; 
+            font-size: 500%;
+    }
 }
