--- a/frontend/src/app/core/components/footer/footer.component.html
+++ b/frontend/src/app/core/components/footer/footer.component.html
@@ -5,23 +5,22 @@
     <div class="footer-copyright">
         <div class="container">
             <div class="row">
-                <div class="col-xl-1 col-lg-1 col-md-2 col-sm-3 footer-img">
+                <div class="col-xl-2 col col-lg-2 col-md-2 col-sm-3 footer-img">
                     <a routerLink="/" class="logo">
                         <img alt="Heritage Innovative Solutions" class="img-fluid" src="../assets/images/logo.png">
                     </a>
                 </div>
 
-                <div class="col-lg-7">
-
+                <div class="copyright-col col col-xl-8 col-lg-8 col-md-8 col-sm-7">
                     <div class="copyright">
                         &copy; Copyright <strong>2018</strong>. All Rights Reserved
                     </div>
                     <div class="credits"> 
-                        Website Designed by <a href="http://hisolutions.co.zw" target="_blank">hisolutions.co.zw</a>
+                        Website Designed by <a href="mailto:dgumbo@hisolutions.co.zw" >dgumbo@hisolutions.co.zw</a>
                     </div>
                 </div> 
 
-                <div class="col-lg-4">
+                <div class="sub-menu-col col col-xl-2 col-lg-2 col-md-2 col-sm-2">
                     <nav id="sub-menu">
                         <ul>
                             <li><a *ngIf="production==false" routerLink="page-faq">FAQ's</a></li>
