--- a/frontend/src/app/core/components/footer/footer.component.scss
+++ b/frontend/src/app/core/components/footer/footer.component.scss
@@ -11,14 +11,11 @@
         
 	border-top: 4px solid #0e0e0e;
 	font-size: 90%;
-	margin-top: 50px; 
+	margin-top: 40px; 
 	position: relative;
 	clear: both;
 }
-
-#footer .container .row > div {
-	margin-bottom: 25px;
-}
+ 
 
 #footer .container input:focus {
 	-webkit-box-shadow: none;
@@ -27,30 +24,38 @@
 
 #footer .logo {
 	display: block;
-}
+} 
 
-#footer .logo.mb-5 {
-	margin-bottom: 12px;
-}
-
-#footer .footer-copyright {
+#footer .copyright {
 	//background: #060606;
 	border-top: 4px solid #060606;
-	/*margin-top: 40px;*/
-	padding: 30px 0 10px;
+	padding: 10px 0;
 }
 
-#footer .footer-copyright nav {
+//#footer .copyright, #footer .credits {
+ #footer .copyright-col{ 
+/*	left:50%;
+        transform: translateX(-50%); */
+/*        margin-left: auto;
+        margin-right: auto;*/
+text-align: center;
+}
+
+#footer .sub-menu-col  { 
+	padding-top: 10px; 
+}
+
+#footer .sub-menu nav {
 	float: right;
 }
 
-#footer .footer-copyright nav ul {
+#footer .sub-menu nav ul {
 	list-style: none;
 	margin: 0;
 	padding: 0;
 }
 
-#footer .footer-copyright nav ul li {
+#footer .sub-menu nav ul li {
 	border-left: 1px solid #505050;
 	display: inline-block;
 	line-height: 12px;
@@ -58,38 +63,26 @@
 	padding: 0 8px;
 }
 
-#footer .footer-copyright nav ul li:first-child {
+#footer .sub-menu nav ul li:first-child {
 	border: medium none;
 	padding-left: 0;
 }
 
-#footer .footer-copyright p { 
+#footer.color .sub-menu nav ul li {
+	border-left-color: #fff;
+}
+
+#footer .sub-menu p { 
 	margin: 0;
 	padding: 0;
 }      
-
-#footer.narrow {
-	padding-top: 30px;
-}
-
-#footer.narrow .footer-copyright {
-	margin-top: 0;
-}
-
-#footer.narrow .nav > li > a {
-	padding: 5px 12px;
-}
-
+ 
 #footer.color {
 	color: #fff;
 }
 
 #footer.color p {
 	color: #fff;
-}
-
-#footer.color .footer-copyright nav ul li {
-	border-left-color: #fff;
 }
 
 #footer.footer-reveal {
