--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -79,6 +79,10 @@ section{
     padding: 55px 0;
 }
 
+section:last-child{
+    padding-bottom: 0px;
+}
+
 .section-header {
     text-align: center;
     padding-bottom: 40px; 
@@ -220,9 +224,12 @@ header {
 
 .hero-container{
     position: absolute;
-    width: 98vw;
-    /*top: 50%;*/
-    /*transform: translateY(-50%);*/ 
+    width: 98vw; 
+    
+    border-width: 20px;
+    border-color: red;
+    top: 50%;
+    transform: translateY(-50%); 
     /*padding-top: 200px;*/
 }
 
@@ -231,7 +238,7 @@ header {
     padding-top : 30px;
     margin-bottom : 20px;
     //margin-left: 30%;
-    transform: translateX(-5%); 
+    //transform: translateX(-5%); 
     text-align: center;
     color: #fff;  
     font-weight: 800;
@@ -247,7 +254,7 @@ header {
 }
 
 .hero-services-carousel-slide{  
-    width: 95vw;
+    width: 98vw;
 }
 
 .hero-services-carousel-inner{ 
@@ -313,7 +320,8 @@ header {
     height: 240px;
     position: relative;
     background: #f2f2f2;
-}//#f2f2f2
+}
+
 
 #services-section .box:hover  {  
     background: #e9e9e9;
@@ -474,6 +482,14 @@ header {
 #get-in-touch-section.light .get-in-touch-ribbon {
     margin-top: -76px;
     margin-left: 14px;
+}
+
+.get-in-touch-col{
+    margin-bottom: 25px;
+}
+
+.get-in-touch-col:last-child{
+    margin-bottom: 0px;
 }
 
 
