almost complete on landing page

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,8 +1,8 @@
 <!--==========================
   Nav Section
 ============================-->
-<!--<app-nav></app-nav>-->
-<!-- /Nav -->    
+<app-nav></app-nav>
+<!-- /Nav -->   
 
  <!--Content-->     
 <router-outlet></router-outlet>
