--- a/frontend/src/app/core/components/nav/nav.component.html
+++ b/frontend/src/app/core/components/nav/nav.component.html
@@ -1,4 +1,4 @@
-<div class="nav-container nav-container-fixed">
+<div class="nav-container nav-container-fixed nav-container-bg">
     <nav class="navbar navbar-expand-lg ">
         
         <div class="navbar-brand-wrapper">
@@ -13,14 +13,14 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto mr-auto ">
-                <li class="nav-item active">
+            <ul class="navbar-nav ml-auto mr-auto "> 
+                <li class="nav-item active highlight-purple">
                     <a class="nav-link"  routerLinkActive="active current" routerLink="/">Home <span class="sr-only">(current)</span></a>
                 </li>
                 
                 <li class="nav-item dropdown" routerLinkActive="active current" 
-                     *ngIf="globals.serviceCategories && globals.serviceCategories.length >= 1" >
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                     *ngIf="production==false && globals.serviceCategories && globals.serviceCategories.length >= 1" >
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="budropdown-togglettondropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Our Services
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
