Finished Refactoring Landing Module

--- a/frontend/src/app/welcome/components/landing/landing.component.html
+++ b/frontend/src/app/welcome/components/landing/landing.component.html
@@ -4,7 +4,7 @@
         <div class="hero-title">        
             <h1 class="hero-h1">Welcome</h1> 
             <h2 class="hero-h2">We are a team of talented professionals.</h2> 
-            <a class="btn-get-started" href="#">Show Me More !</a> 
+            <a class="btn-get-started" href="#services-section">Show Me More !</a> 
         </div> 
 
         <div class="hero-services d-none d-sm-block" 
